[gd_scene load_steps=3 format=3 uid="uid://d2krwelj03ox8"]

[ext_resource type="Script" uid="uid://df8uj4ogsde0c" path="res://UI/pause_menu.gd" id="1_ltd3m"]

[sub_resource type="LabelSettings" id="LabelSettings_ltd3m"]
font_size = 20

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ltd3m")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
offset_right = 896.0
offset_bottom = 512.0
color = Color(0.145098, 0.145098, 0.145098, 0.584314)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 64.0
offset_top = 32.0
offset_right = 830.0
offset_bottom = 192.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Player 1"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Up"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "W"
horizontal_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Down"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "S"
horizontal_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Player 2"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Up"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="HBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "I"
horizontal_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer2/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Down"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="HBoxContainer/VBoxContainer2/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "K"
horizontal_alignment = 1

[node name="2PlayersButton" type="Button" parent="."]
layout_mode = 0
offset_left = 536.0
offset_top = 192.0
offset_right = 744.0
offset_bottom = 264.0
text = "2 PLAYERS"

[node name="vsAIButton" type="Button" parent="."]
layout_mode = 0
offset_left = 152.0
offset_top = 192.0
offset_right = 360.0
offset_bottom = 264.0
text = "VS AI"

[node name="VolumeSlider" type="HSlider" parent="."]
layout_mode = 0
offset_left = 256.0
offset_top = 400.0
offset_right = 637.0
offset_bottom = 416.0
max_value = 1.0
step = 0.05
value = 1.0
tick_count = 5
ticks_on_borders = true

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 320.0
offset_top = 360.0
offset_right = 576.0
offset_bottom = 383.0
text = "Volume"
label_settings = SubResource("LabelSettings_ltd3m")
horizontal_alignment = 1

[connection signal="pressed" from="2PlayersButton" to="." method="_on_players_button_pressed"]
[connection signal="pressed" from="vsAIButton" to="." method="_on_vs_ai_button_pressed"]
[connection signal="value_changed" from="VolumeSlider" to="." method="_on_volume_slider_value_changed"]
